# telegram-reminder-bot

./: README.md  docker-compose.yml  stack.yaml  telegram-reminder-bot.cabal  telegram-test-bot.cabal
nginx/: nginx.conf
src/: DateParser.hs  Lib.hs  Models.hs  Version.hs
