name:                telegram-reminder-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adamczykm/telegram-reminder-bot#readme
license:             MIT
license-file:        LICENSE
author:              Michał Adamczyk
maintainer:          Michał Adamczyk
copyright:           2018 Michał Adamczyk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Version
                     , Models
                     , DateParser

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , monad-logger
                     , megaparsec
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , wai
                     , warp
                     , telegram-api
                     , mtl
                     , http-client
                     , http-client-tls
                     , time
                     , text

  default-language:    Haskell2010

executable telegram-reminder-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , telegram-reminder-bot
  default-language:    Haskell2010

test-suite telegram-reminder-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , telegram-reminder-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamczykm/telegram-reminder-bot
